--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@ body {
                 font-family: "Roboto-Black";
                 color: $primary;
                 text-transform: uppercase;
-                margin: 10px 5px;
+                margin: 5px;
             }
             .mat-card {
                 margin-bottom: 20px;
