--- a/src/app/view/turma/notas-turma/notas-turma.component.scss
+++ b/src/app/view/turma/notas-turma/notas-turma.component.scss
@@ -2,3 +2,14 @@
     margin-left: auto;
     padding-bottom: 5px;
 }
+::ng-deep .table-container {
+    .nome {
+        min-width: 150px;
+    }
+    .matricula {
+        min-width: 90px;
+    }
+    .nota {
+        min-width: 80px;
+    }
+}
