--- a/src/app/view/financeiro/financeiro-menu.component.html
+++ b/src/app/view/financeiro/financeiro-menu.component.html
@@ -7,10 +7,10 @@
         </mat-expansion-panel-header>
         <div class="form-grid menu-secao">
             <a class="two" [routerLink]="['', { outlets: { secondRouter: ['consultaBoleto'] } }]" (click)="mudarRota()">
-                <mat-icon>person_add</mat-icon><span>Consultar Boletos</span>
+                <mat-icon>receipt</mat-icon><span>Consultar Boletos</span>
             </a>
             <a class="two" [routerLink]="['', { outlets: { secondRouter: ['adicionarBoleto'] } }]" (click)="mudarRota()">
-                <mat-icon>receipt</mat-icon><span>Adicionar Boletos</span>
+                <mat-icon>post_add</mat-icon><span>Adicionar Boletos</span>
             </a>
 
         </div>
