--- a/src/app/view/turma/notas-turma/adicionar-nota/adicionar-nota.component.scss
+++ b/src/app/view/turma/notas-turma/adicionar-nota/adicionar-nota.component.scss
@@ -9,7 +9,9 @@
     max-height: 50vh;
     overflow-y: auto;
 }
-
+.mat-form-field {
+    height: 50px;
+}
 .aluno {
     margin: auto;
     padding-bottom: 14px;
