--- a/src/app/modal-login/modal-login.component.html
+++ b/src/app/modal-login/modal-login.component.html
@@ -10,7 +10,7 @@
             </mat-form-field>
             <mat-form-field class="six">
                 <mat-label>Senha:</mat-label>
-                <input matInput type="password" [(ngModel)]="element.senha">
+                <input matInput type="password" [(ngModel)]="element.senha" (keyup.enter)="login()">
             </mat-form-field>
         </div>
     </div>
