Tratando arquivos de retorno

--- a/src/app/view/aluno/filtro-aluno/filtro-aluno.component.html
+++ b/src/app/view/aluno/filtro-aluno/filtro-aluno.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel [expanded]="true">
+<mat-expansion-panel [expanded]="expanded">
     <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'50px'">
         <mat-panel-title>
             Filtro
