--- a/src/app/view/financeiro/financeiro-menu.component.html
+++ b/src/app/view/financeiro/financeiro-menu.component.html
@@ -7,12 +7,14 @@
         </mat-expansion-panel-header>
         <div class="form-grid menu-secao">
             <a class="two" [routerLink]="['', { outlets: { secondRouter: ['consultaBoleto'] } }]" (click)="mudarRota()">
-                <mat-icon>receipt</mat-icon><span>Consultar Boletos</span>
+                <mat-icon>payments</mat-icon><span>Consultar Boletos</span>
             </a>
             <a class="two" [routerLink]="['', { outlets: { secondRouter: ['adicionarBoleto'] } }]" (click)="mudarRota()">
                 <mat-icon>post_add</mat-icon><span>Adicionar Boletos</span>
             </a>
-
+            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['processarRetorno'] } }]" (click)="mudarRota()">
+                <mat-icon>summarize</mat-icon><span>Processar Retorno</span>
+            </a>
         </div>
     </mat-expansion-panel>
 </mat-accordion>
