Módulo de financeiro

--- a/src/app/view/financeiro/consulta-retorno/consulta-retorno.component.html
+++ b/src/app/view/financeiro/consulta-retorno/consulta-retorno.component.html
@@ -3,5 +3,5 @@
     <div style="display: flex;">
         <h1>Consultar Retornos</h1>
     </div>
-    <tabela-retorno [pageList]="pageList" (pesquisar)="pesquisar()" (paginar)="paginar($event)" (exportar)="exportarPesquisa()"></tabela-retorno>
+    <tabela-retorno [pageList]="pageList" (pesquisar)="pesquisar()" (paginar)="paginar($event)"></tabela-retorno>
 </div>
