--- a/src/app/custom-components/custom-table/custom-table.component.html
+++ b/src/app/custom-components/custom-table/custom-table.component.html
@@ -19,7 +19,7 @@
                         {{ column.header }}
 
                     </ng-template>
-                    
+
                 </th>
                 <td mat-cell
                     *matCellDef="let element; let i = dataIndex"
@@ -36,9 +36,10 @@
 
                         </ng-container>
                         <ng-template #elseTemplate>
-                            <span class="{{isNumber(element, column.field, column.isNumeric)}}">
-                            {{ resolveField(element, column.field) }}
-                        </span>
+                            <!-- <span class="{{isNumber(element, column.field, column.isNumeric)}}"> -->
+                            <span>
+                                {{ resolveField(element, column.field) }}
+                            </span>
 
                         </ng-template>
 
