--- a/src/app/custom-components/custom-table/custom-table.component.html
+++ b/src/app/custom-components/custom-table/custom-table.component.html
@@ -1,58 +1,109 @@
-<div style="display: grid; width: 100%;margin-bottom: 10px;">
-    <div class="table-container" style="overflow: auto;" [ngStyle]="{ 'max-height': maxHeigth }" #tableToExport>
-        <table mat-table datatable [dataSource]="listOfElements" multiTemplateDataRows matSort
-            (matSortChange)="sortData($event)">
-            <ng-container *ngFor="let column of columns; let i = index" [matColumnDef]="column.key">
-                <th mat-header-cell mat-sort-header="{{column.key}}"
-                    [disabled]="column.sortable == null || !column.sortable" *matHeaderCellDef
-                    [attr.colspan]="column.colspan" [ngClass]="column.classHeader" style="align-items: left">
-                    <ng-container *ngIf="headerTemplate != null && templatesCustomTable[headerTemplate] != null; else elseTemplate">
+<div style="display: grid; width: 100%; margin-bottom: 10px">
+    <div
+        class="table-container"
+        style="overflow: auto"
+        [ngStyle]="{ 'max-height': maxHeigth }"
+        #tableToExport
+    >
+        <table
+            mat-table
+            datatable
+            [dataSource]="listOfElements"
+            multiTemplateDataRows
+            matSort
+            (matSortChange)="sortData($event)"
+        >
+            <ng-container
+                *ngFor="let column of columns; let i = index"
+                [matColumnDef]="column.key"
+            >
+                <th
+                    mat-header-cell
+                    mat-sort-header="{{ column.key }}"
+                    [disabled]="column.sortable == null || !column.sortable"
+                    *matHeaderCellDef
+                    [attr.colspan]="column.colspan"
+                    [ngClass]="column.classHeader"
+                    style="align-items: left"
+                >
+                    <ng-container
+                        *ngIf="
+                            headerTemplate != null &&
+                                templatesCustomTable[headerTemplate] != null;
+                            else elseTemplate
+                        "
+                    >
                         <ng-container
-                            *ngTemplateOutlet="templatesCustomTable[headerTemplate];
-                            context: {
-                                $implicit: column,
-                                index: i
-                            }">
+                            *ngTemplateOutlet="
+                                templatesCustomTable[headerTemplate];
+                                context: {
+                                    $implicit: column,
+                                    index: i
+                                }
+                            "
+                        >
                         </ng-container>
                     </ng-container>
                     <ng-template #elseTemplate>
                         {{ column.header }}
-
                     </ng-template>
-
                 </th>
-                <td mat-cell
+                <td
+                    mat-cell
                     *matCellDef="let element; let i = dataIndex"
                     [attr.colspan]="column.colspan"
                     [ngClass]="column.classBody"
                     [attr.rowspan]="column.mesclavel ? element.rowspan : 1"
-                    [style.display]="column.mesclavel && element.rowspan == 0 ? 'none' : ''">
-                    <ng-container *ngIf="column.bodyTemplateName == null ||
-                                        templatesCustomTable[column.bodyTemplateName] == null">
-                        <ng-container *ngIf="mostrarTooltip(element, column); else elseTemplate">
-                            <span [matTooltip]="stringTooltip(element, column, true)">
-                            {{ stringTooltip(element, column, false) }}
-                        </span>
-
+                    [style.display]="
+                        column.mesclavel && element.rowspan == 0 ? 'none' : ''
+                    "
+                >
+                    <ng-container
+                        *ngIf="
+                            column.bodyTemplateName == null ||
+                            templatesCustomTable[column.bodyTemplateName] ==
+                                null
+                        "
+                    >
+                        <ng-container
+                            *ngIf="
+                                mostrarTooltip(element, column);
+                                else elseTemplate
+                            "
+                        >
+                            <span
+                                [matTooltip]="
+                                    stringTooltip(element, column, true)
+                                "
+                            >
+                                {{ stringTooltip(element, column, false) }}
+                            </span>
                         </ng-container>
                         <ng-template #elseTemplate>
                             <!-- <span class="{{isNumber(element, column.field, column.isNumeric)}}"> -->
                             <span>
                                 {{ resolveField(element, column.field) }}
                             </span>
-
                         </ng-template>
-
                     </ng-container>
-                    <ng-container *ngIf="column.bodyTemplateName != null && templatesCustomTable[column.bodyTemplateName] != null">
+                    <ng-container
+                        *ngIf="
+                            column.bodyTemplateName != null &&
+                            templatesCustomTable[column.bodyTemplateName] !=
+                                null
+                        "
+                    >
                         <ng-container
-                            *ngTemplateOutlet="templatesCustomTable[column.bodyTemplateName];
-                            context: {
-                                $implicit: element,
-                                column: column,
-                                rowData: element,
-                                rowIndex: i
-                            }">
+                            *ngTemplateOutlet="
+                                templatesCustomTable[column.bodyTemplateName];
+                                context: {
+                                    $implicit: element,
+                                    column: column,
+                                    rowData: element,
+                                    rowIndex: i
+                                }
+                            "
+                        >
                         </ng-container>
                     </ng-container>
                 </td>
@@ -60,40 +111,75 @@
 
             <ng-container *ngFor="let colGroup of colGroups">
                 <ng-container *ngIf="colGroup.groupHasHeader">
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns(colGroup.keyGroup); sticky:true"
-                        [ngClass]="colGroup.groupHeaderClass"></tr>
+                    <tr
+                        mat-header-row
+                        *matHeaderRowDef="
+                            displayedColumns(colGroup.keyGroup);
+                            sticky: true
+                        "
+                        [ngClass]="colGroup.groupHeaderClass"
+                    ></tr>
                 </ng-container>
                 <ng-container *ngIf="colGroup.groupHasBody">
-                    <tr mat-row
+                    <tr
+                        mat-row
                         *matRowDef="
                             let element;
                             let i = index;
                             let row;
-                            columns: displayedColumns(colGroup.keyGroup)"
+                            columns: displayedColumns(colGroup.keyGroup)
+                        "
                         [ngClass]="colGroup.groupBodyClass"
-                        (click)="elementClicked(element, $event)"></tr>
+                        (click)="elementClicked(element, $event)"
+                    ></tr>
                 </ng-container>
             </ng-container>
 
             <ng-container *ngIf="colGroups.length == 0">
-                <tr mat-header-row *matHeaderRowDef="displayedColumns(); sticky:true"></tr>
-                <tr mat-row *matRowDef="let element; let i = index; columns: displayedColumns()"
-                    (click)="elementClicked(element, $event)"></tr>
+                <tr
+                    mat-header-row
+                    *matHeaderRowDef="displayedColumns(); sticky: true"
+                ></tr>
+                <tr
+                    mat-row
+                    *matRowDef="
+                        let element;
+                        let i = index;
+                        columns: displayedColumns()
+                    "
+                    (click)="elementClicked(element, $event)"
+                    class="{{
+                        selectedElements.includes(element) ? 'selected' : ''
+                    }}"
+                ></tr>
             </ng-container>
         </table>
 
         <div *ngIf="isEmpty()" class="extra-table">
             <span>{{ emptyMessage }}</span>
         </div>
-        <div class="extra-table" *ngIf="loading" style="display: flex; justify-content: center; align-items: center">
-            <mat-progress-spinner color="primary" mode="indeterminate" diameter="25">
+        <div
+            class="extra-table"
+            *ngIf="loading"
+            style="display: flex; justify-content: center; align-items: center"
+        >
+            <mat-progress-spinner
+                color="primary"
+                mode="indeterminate"
+                diameter="25"
+            >
             </mat-progress-spinner>
         </div>
 
         <div class="table-paginator" *ngIf="paginated && paginateData">
-            <mat-paginator #paginator [length]="paginateData.totalCount" [pageSize]="paginateData.pageSize"
-                [pageSizeOptions]="[5, 10, 25, 50, 100]" [pageIndex]="paginaAtual"
-                (page)="onChangePage($event, paginator)">
+            <mat-paginator
+                #paginator
+                [length]="paginateData.totalCount"
+                [pageSize]="paginateData.pageSize"
+                [pageSizeOptions]="[5, 10, 25, 50, 100]"
+                [pageIndex]="paginaAtual"
+                (page)="onChangePage($event, paginator)"
+            >
             </mat-paginator>
         </div>
     </div>
