--- a/src/app/custom-components/custom-table/custom-table.component.scss
+++ b/src/app/custom-components/custom-table/custom-table.component.scss
@@ -1,114 +1,113 @@
-@import '../../../theming';
+@import "../../../theming";
 
 tr .element-detail {
-  overflow: hidden;
-  display: flex;
+    overflow: hidden;
+    display: flex;
 }
 
 td {
-  &.button {
-    text-align: right;
-    width: 30px;
-    cursor: pointer;
-  }
-  &.rowexpansion {
-    height: auto;
-      padding: 0;
-      border: none;
-  }
-  &.detail-row {
-    height: 0;
-  }
+    &.button {
+        text-align: right;
+        width: 30px;
+        cursor: pointer;
+    }
+    &.rowexpansion {
+        height: auto;
+        padding: 0;
+        border: none;
+    }
+    &.detail-row {
+        height: 0;
+    }
 }
 
 tr.detail-row {
-	height: 0!important;
+    height: 0 !important;
 }
 
 .extra-table {
-  font-size: 0.9em;
-  padding: 15px;
-  background-color: $off-white;
+    font-size: 0.9em;
+    padding: 15px;
+    background-color: $off-white;
 }
 
-
 .toolbar {
-  span {
-    :hover {
-      cursor: pointer;
+    span {
+        :hover {
+            cursor: pointer;
+        }
     }
-  }
 }
 
 .label-pesquisar {
-  justify-self: end;
-  padding: 5px;
+    justify-self: end;
+    padding: 5px;
 }
 .table-container {
-  padding: 0 10px;
-  border-spacing: 0;
-  border-collapse: collapse;
-  overflow-y: auto;
+    padding: 0 10px;
+    border-spacing: 0;
+    border-collapse: collapse;
+    overflow-y: auto;
 }
 
 [aria-sort="ascending"] {
-  ::ng-deep .mat-sort-header-arrow {
-    display: block !important;
-    position: absolute !important;
-    right: 0 !important;
+    ::ng-deep .mat-sort-header-arrow {
+        display: block !important;
+        position: absolute !important;
+        right: 0 !important;
 
-    .mat-sort-header-indicator {
-      &::before {
-        //font     : normal normal normal 1.1rem/1;
-        font-family: "Font Awesome 5 Free";
-        content: "\f0de";
-        //top      : .2rem;
-      }
+        .mat-sort-header-indicator {
+            &::before {
+                font-family: "Font Awesome 5 Free";
+                content: "\f0de";
+            }
+        }
     }
-  }
 }
 
 [aria-sort="descending"] {
-  ::ng-deep .mat-sort-header-arrow {
+    ::ng-deep .mat-sort-header-arrow {
+        display: block !important;
+        position: absolute !important;
+        right: 0 !important;
+
+        .mat-sort-header-indicator {
+            &::before {
+                font-family: "Font Awesome 5 Free";
+                content: "\f0dd";
+            }
+        }
+    }
+}
+
+::ng-deep .mat-sort-header-arrow {
     display: block !important;
     position: absolute !important;
     right: 0 !important;
 
     .mat-sort-header-indicator {
-      &::before {
-        // font    : normal normal normal 1.1rem/1;
-        font-family: "Font Awesome 5 Free";
-        content: "\f0dd";
-        //top      : -.9rem;
-      }
+        &::before {
+            font-family: "Font Awesome 5 Free";
+            content: "\f0dc";
+            position: absolute;
+            opacity: 1;
+        }
     }
-  }
-}
-
-::ng-deep .mat-sort-header-arrow {
-  display: block !important;
-  position: absolute !important;
-  right: 0 !important;
-
-  .mat-sort-header-indicator {
-    &::before {
-      //font     : normal normal normal 1.1rem/1;
-      font-family: "Font Awesome 5 Free";
-      content: "\f0dc";
-      position: absolute;
-      opacity: 1;
-
-      //top: .2rem;
-    }
-  }
 }
 
 .alinhaNumerosADireita {
-  float: right;
+    float: right;
 }
 
 .form-control {
-  border-radius: 5px;
-  border: solid 1px #78849e;
-  padding: 5px;
+    border-radius: 5px;
+    border: solid 1px $light-gray;
+    padding: 5px;
+}
+
+.selected {
+    > td {
+        background-color: $light-gray;
+        color: $white;
+    }
 }
