--- a/src/app/view/financeiro/consulta-boleto/consulta-boleto.component.html
+++ b/src/app/view/financeiro/consulta-boleto/consulta-boleto.component.html
@@ -1,13 +1,45 @@
-
 <div class="pesquisa">
-    <div style="display: flex;">
+    <div style="display: flex">
         <h1>Consultar Boletos</h1>
         <div class="buttons">
-            <button mat-raised-button color="primary" (click)="exportarPesquisa()">
-                <mat-icon svgIcon="xls_icon"></mat-icon> Exportar Pesquisa
+            <button
+                mat-raised-button
+                color="primary"
+                (click)="habilitarSelecao()"
+            >
+                <mat-icon>list</mat-icon>
+                {{ selecaoHabilitada ? "Desabilitar" : "Habilitar" }} Seleção
             </button>
+            <ng-container *ngIf="selecaoHabilitada; else elseTemplate">
+                <button
+                    mat-raised-button
+                    color="primary"
+                    [disabled]="linhasSelecionadas.length == 0"
+                    (click)="verSelecionados()"
+                >
+                    <mat-icon>checklist</mat-icon> Ver Selecionados
+                </button>
+            </ng-container>
+            <ng-template #elseTemplate>
+                <button
+                    mat-raised-button
+                    color="primary"
+                    (click)="exportarPesquisa()"
+                >
+                    <mat-icon svgIcon="xls_icon"></mat-icon> Exportar Pesquisa
+                </button>
+            </ng-template>
         </div>
     </div>
-    <filtro-boleto [filtro]="filtro" (pesquisar)="pesquisar($event)"></filtro-boleto>
-    <tabela-boleto [pageList]="pageList" (pesquisar)="pesquisar()" (paginar)="paginar($event)" (exportar)="exportarPesquisa()"></tabela-boleto>
+    <filtro-boleto
+        [filtro]="filtro"
+        (pesquisar)="pesquisar($event)"
+    ></filtro-boleto>
+    <tabela-boleto
+        [pageList]="pageList"
+        (pesquisar)="pesquisar()"
+        (paginar)="paginar($event)"
+        (exportar)="exportarPesquisa()"
+        [selecaoHabilitada]="selecaoHabilitada"
+    ></tabela-boleto>
 </div>
