Criação de componentes

--- a/src/app/view/financeiro/relatorio/relatorio.component.html
+++ b/src/app/view/financeiro/relatorio/relatorio.component.html
@@ -1,1 +1,10 @@
-<p>relatorio works!</p>
+<div class="formulario">
+    <div class="header">
+        <div class="six">
+            <h1>Relatório Financeiro</h1>
+        </div>
+    </div>
+    <mat-card>
+        <faturamento></faturamento>
+    </mat-card>
+</div>
