--- a/src/app/view/financeiro/financeiro-menu.component.html
+++ b/src/app/view/financeiro/financeiro-menu.component.html
@@ -1,22 +1,61 @@
 <mat-accordion>
-    <mat-expansion-panel [(expanded)]='expanded'>
-        <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'50px'">
-            <mat-panel-title>
-                Financeiro
-            </mat-panel-title>
+    <mat-expansion-panel [(expanded)]="expanded">
+        <mat-expansion-panel-header
+            [collapsedHeight]="'40px'"
+            [expandedHeight]="'50px'"
+        >
+            <mat-panel-title> Financeiro </mat-panel-title>
         </mat-expansion-panel-header>
         <div class="form-grid menu-secao">
-            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['consultaBoleto'] } }]" (click)="mudarRota()">
+            <a
+                class="two"
+                [routerLink]="[
+                    '',
+                    { outlets: { secondRouter: ['consultaBoleto'] } }
+                ]"
+                (click)="mudarRota()"
+            >
                 <mat-icon>payments</mat-icon><span>Consultar Boletos</span>
             </a>
-            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['adicionarBoleto'] } }]" (click)="mudarRota()">
+            <a
+                class="two"
+                [routerLink]="[
+                    '',
+                    { outlets: { secondRouter: ['adicionarBoleto'] } }
+                ]"
+                (click)="mudarRota()"
+            >
                 <mat-icon>post_add</mat-icon><span>Adicionar Boletos</span>
             </a>
-            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['processarRetorno'] } }]" (click)="mudarRota()">
+            <a
+                class="two"
+                [routerLink]="[
+                    '',
+                    { outlets: { secondRouter: ['processarRetorno'] } }
+                ]"
+                (click)="mudarRota()"
+            >
                 <mat-icon>summarize</mat-icon><span>Processar Retorno</span>
             </a>
-            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['listarRetornos'] } }]" (click)="mudarRota()">
+            <a
+                class="two"
+                [routerLink]="[
+                    '',
+                    { outlets: { secondRouter: ['listarRetornos'] } }
+                ]"
+                (click)="mudarRota()"
+            >
                 <mat-icon>view_list</mat-icon><span>Listar Retornos</span>
+            </a>
+            <a
+                class="two"
+                [routerLink]="[
+                    '',
+                    { outlets: { secondRouter: ['relatorioFinanceiro'] } }
+                ]"
+                (click)="mudarRota()"
+            >
+                <mat-icon>view_list</mat-icon><span>Relatório Financeiro</span>
             </a>
         </div>
     </mat-expansion-panel>
