--- a/src/app/view/turma/filtro-turma/filtro-turma.component.html
+++ b/src/app/view/turma/filtro-turma/filtro-turma.component.html
@@ -1,5 +1,8 @@
 <mat-expansion-panel [expanded]="true">
-    <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'50px'">
+    <mat-expansion-panel-header
+        [collapsedHeight]="'40px'"
+        [expandedHeight]="'50px'"
+    >
         <mat-panel-title> Filtro </mat-panel-title>
     </mat-expansion-panel-header>
     <div class="form-grid">
@@ -9,7 +12,8 @@
                 field="nome"
                 placeholder="Todos"
                 [options]="cursosOptions"
-                [(selected)]="cursoSelecionado">
+                [(selected)]="cursoSelecionado"
+            >
             </custom-select>
         </div>
 
@@ -19,19 +23,27 @@
         </mat-form-field>
 
         <mat-form-field class="two">
-            <mat-label> Ano de Início</mat-label>
-            <input matInput [matDatepicker]="dp"  [(ngModel)]="filtro.anoInicio" />
+            <mat-label>Ano de Início</mat-label>
+            <input
+                matInput
+                [matDatepicker]="dp"
+                [(ngModel)]="filtro.anoInicio"
+            />
             <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
-            <mat-datepicker #dp
+            <mat-datepicker
+                #dp
                 startView="multi-year"
-                (yearSelected)="chosenYearHandler($event, dp)">
+                (yearSelected)="chosenYearHandler($event, dp)"
+            >
             </mat-datepicker>
         </mat-form-field>
 
         <div class="two checkbox">
-            <mat-checkbox class="example-margin"
-                        [(ngModel)]="filtro.concluidas"
-                        color="primary">
+            <mat-checkbox
+                class="example-margin"
+                [(ngModel)]="filtro.concluidas"
+                color="primary"
+            >
                 Concluídas
             </mat-checkbox>
         </div>
@@ -42,7 +54,8 @@
             <button
                 mat-raised-button
                 color="primary"
-                (click)="pesquisarTurmas()">
+                (click)="pesquisarTurmas()"
+            >
                 Pesquisar
             </button>
         </div>
