Ajustando passagem de token

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<home *ngIf="(usuario$ | async) != null"></home>
+<home *ngIf="(usuarioLogado$ | async) != null"></home>
 <loading-component></loading-component>
 <notification-component></notification-component>
