Component de pagamento mensal

--- a/src/app/view/financeiro/financeiro-menu.component.html
+++ b/src/app/view/financeiro/financeiro-menu.component.html
@@ -55,7 +55,7 @@
                 ]"
                 (click)="mudarRota()"
             >
-                <mat-icon>view_list</mat-icon><span>Relatório Financeiro</span>
+                <mat-icon>bar_chart</mat-icon><span>Relatório Financeiro</span>
             </a>
         </div>
     </mat-expansion-panel>
