--- a/src/app/view/financeiro/relatorio/relatorio.component.html
+++ b/src/app/view/financeiro/relatorio/relatorio.component.html
@@ -9,6 +9,9 @@
             <div class="six">
                 <faturamento></faturamento>
             </div>
+            <div class="six">
+                <pagamentos-mes></pagamentos-mes>
+            </div>
         </div>
     </mat-card>
 </div>
