--- a/src/app/view/financeiro/relatorio/faturamento/faturamento.component.html
+++ b/src/app/view/financeiro/relatorio/faturamento/faturamento.component.html
@@ -1,10 +1,10 @@
-<div class="form-grid">
-    <div class="three">
-        <h4>Visão geral</h4>
-    </div>
-    <div class="nine form-grid">
-        <mat-form-field class="four">
-            <mat-label>Data Inicial</mat-label>
+<div class="card">
+    <div class="form-grid">
+        <div class="three">
+            <h4>Projeção geral</h4>
+        </div>
+        <mat-form-field class="three">
+            <mat-label>De</mat-label>
             <input
                 matInput
                 [matDatepicker]="dp1"
@@ -22,8 +22,8 @@
             >
             </mat-datepicker>
         </mat-form-field>
-        <mat-form-field class="four">
-            <mat-label>Data Final</mat-label>
+        <mat-form-field class="three">
+            <mat-label>Até</mat-label>
             <input
                 matInput
                 [matDatepicker]="dp2"
@@ -41,22 +41,22 @@
             >
             </mat-datepicker>
         </mat-form-field>
-        <div class="four buttons">
-            <button mat-raised-button color="primary" (click)="buscar()">
-                Pesquisar
+        <div class="three buttons">
+            <button mat-mini-fab color="primary" (click)="buscar()">
+                <mat-icon>search</mat-icon>
             </button>
         </div>
     </div>
-</div>
 
-<div style="display: block" class="chart">
-    <canvas
-        baseChart
-        [datasets]="dataSet"
-        [labels]="lineChartLabels"
-        [options]="lineChartOptions"
-        [chartType]="'bar'"
-        (chartHover)="chartHovered($event)"
-        (chartClick)="chartClicked($event)"
-    ></canvas>
+    <div style="display: block" class="chart">
+        <canvas
+            baseChart
+            [datasets]="dataSet"
+            [labels]="lineChartLabels"
+            [options]="lineChartOptions"
+            [chartType]="'bar'"
+            (chartHover)="chartHovered($event)"
+            (chartClick)="chartClicked($event)"
+        ></canvas>
+    </div>
 </div>
