Módulo de Relatório financeiro (#46)
* Criação de componentes

* update

* update

* update

* Criando grafico

* Método de relatorio

* Component de pagamento mensal

--- a/src/app/view/financeiro/relatorio/relatorio.component.html
+++ b/src/app/view/financeiro/relatorio/relatorio.component.html
@@ -1,1 +1,17 @@
-<p>relatorio works!</p>
+<div class="formulario">
+    <div class="header">
+        <div class="six">
+            <h1>Relatório Financeiro</h1>
+        </div>
+    </div>
+    <mat-card>
+        <div class="form-grid">
+            <div class="six">
+                <faturamento></faturamento>
+            </div>
+            <div class="six">
+                <pagamentos-mes></pagamentos-mes>
+            </div>
+        </div>
+    </mat-card>
+</div>
