--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,6 @@ body {
         .pesquisa,
         .tabela {
             .mat-card {
-                margin-bottom: 20px;
                 box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
                     0px 4px 5px 0px rgba(0, 0, 0, 0.14),
                     0px 1px 10px 0px rgba(0, 0, 0, 0.12);
@@ -26,6 +25,9 @@ body {
                     padding-top: 10px;
                 }
             }
+        }
+        .formulario .mat-card {
+            margin-bottom: 20px;
         }
         .mat-card-subtitle,
         .mat-card-content {
