--- a/src/app/view/financeiro/relatorio/pagamentos-mes/pagamentos-mes.component.html
+++ b/src/app/view/financeiro/relatorio/pagamentos-mes/pagamentos-mes.component.html
@@ -34,6 +34,7 @@
             baseChart
             [data]="pieChartData"
             [labels]="pieChartLabels"
+            [options]="options"
             [chartType]="'pie'"
             (chartHover)="chartHovered($event)"
             (chartClick)="chartClicked($event)"
